--- a/PKSPredictorREST/pom.xml
+++ b/PKSPredictorREST/pom.xml
@@ -63,6 +63,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>net.sf.jfasta</groupId>
+            <artifactId>jfasta</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
