--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -38,21 +43,21 @@
         <repository>
             <id>maven-restlet</id>
             <name>Public online Restlet repository</name>
-            <url>http://maven.restlet.org</url>
+            <url>https://maven.restlet.org</url>
         </repository>
         <repository>
             <id>maven-repo</id>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
             <id>ebi-repo</id>
             <name>EBI maven repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <url>https://www.ebi.ac.uk/~maven/m2repo</url>
         </repository>
         <repository>
             <id>ebi-repo-snapshots</id>
             <name>EBI maven snapshots repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <url>https://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
         </repository>
         <repository>
             <id>sonatype</id>
@@ -65,9 +70,7 @@
         <repository>
             <id>ambit-plovdiv</id>
             <name>ambit-plovdiv</name>
-            <url>
-                http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/thirdparty/
-            </url>
+            <url>https://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/thirdparty/</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
